# high-performanc-group-proj

./: .gitignore  CMakeLists.txt  Makefile  README.md  ScalingStudy.md  Teamwork.md  class_project  compare_results.py  implementations.md  main.cpp  validate.py  visualize_clusters.py
algoirthm_impl/: SharedGPU.cu  SharedGPU.cuh
gpu/: CMakeLists.txt  GlobalGPU.cu  GlobalGPU.cuh  Makefile  SharedGPU.cu  SharedGPU.cuh
models/: AlgorithmFactory.h  DistributedCpu.h  DistributedGpu.h  IAlgorithm.h  Point.h  Serial.h  SharedCpu.cpp  SharedCpu.h  SharedCpu.hpp  SharedGpu.h  SpotifyFrame.h
src/: AlgorithmFactory.cpp  DistributedCpu.cpp  Serial.cpp  SpotifyFrameUtils.cpp  main.cpp
tools/: SpotifyFrameReader.cpp  SpotifyFrameReader.h  SpotifyFrameUtils.h  utils.cpp  utils.h
